feat: tax ratio
