# docs/swagger.yaml
@@ -55,11 +55,11 @@ definitions:
         type: number
       global_xau_updated_at:
         type: string
+      tax_percentage:
+        type: number
       xau_jewelry_price_gram:
         type: number
       xau_price_gram:
-        type: number
-      xau_price_ounce:
         type: number
     type: object
   GetSummaryRes:
